--- a/style.css
+++ b/style.css
@@ -143,4 +143,14 @@ body.nav-active .nav__list-item:nth-child(3) {
 }
 body.nav-active .nav__list-item:nth-child(4) {
   transition-delay: 0.9s;
-}/*# sourceMappingURL=style.css.map */
+}
+body.nav-active .nav__list-item:nth-child(5) {
+  transition-delay: 1.0s;
+}
+body.nav-active .nav__list-item:nth-child(6) {
+  transition-delay: 1.1s;
+}
+body.nav-active .nav__list-item:nth-child(8) {
+  transition-delay: 1.2s;
+}
+/*# sourceMappingURL=style.css.map */
