--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ body {
   transform: translate(0%, -50%);
   width: 100%;
   text-align: center;
-  font-size: calc(2vw + 10px);
+  font-size: calc(1vw + 10px);
+  right: 10px;
   font-weight: 200;
   cursor: pointer;
 }
@@ -150,7 +151,7 @@ body.nav-active .nav__list-item:nth-child(5) {
 body.nav-active .nav__list-item:nth-child(6) {
   transition-delay: 1.1s;
 }
-body.nav-active .nav__list-item:nth-child(8) {
+body.nav-active .nav__list-item:nth-child(7) {
   transition-delay: 1.2s;
 }
 /*# sourceMappingURL=style.css.map */
