--- a/style.css
+++ b/style.css
@@ -1,157 +1,231 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
-  background-color: #1e2023;
-  font-family: "Fira Sans", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	background-color: #1e2023;
+	font-family: "Fira Sans", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+p {
+	font-size: 3vmin;
+	line-height: 2em;
+	letter-spacing: 0.05em;
+	text-align: justify;
+	margin: 50px 0;
+	padding: 0 30px;
+	color:white;
+}
+
+#progress {
+	position: fixed;
+	bottom: 20px;
+	right: 10px;
+	height: 70px;
+	width: 70px;
+	display: none;
+	place-items: center;
+	border-radius: 50%;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+}
+
+#progress-value {
+	display: block;
+	height: calc(100% - 15px);
+	width: calc(100% - 15px);
+	background-color: #ffffff;
+	border-radius: 50%;
+	display: grid;
+	place-items: center;
+	font-size: 35px;
+	color: #001a2e;
 }
 
 .site-content {
-  max-width: 1100px;
-  height: 100vh;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	max-width: 1100px;
+	height: 100vh;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
+
 .site-content__headline {
-  font-weight: 200;
-  color: #ffffff;
-  font-size: calc(2vw + 10px);
+	font-weight: 200;
+	color: #ffffff;
+	font-size: calc(2vw + 10px);
 }
 
 .menu-icon {
-  height: 30px;
-  width: 30px;
-  position: fixed;
-  z-index: 2;
-  left: 50px;
-  top: 30px;
-  cursor: pointer;
+	height: 30px;
+	width: 30px;
+	position: fixed;
+	z-index: 2;
+	left: 50px;
+	top: 30px;
+	cursor: pointer;
 }
+
 .menu-icon__line {
-  height: 2px;
-  width: 30px;
-  display: block;
-  background-color: #ffffff;
-  margin-bottom: 4px;
-  transition: transform 0.2s ease, background-color 0.5s ease;
+	height: 2px;
+	width: 30px;
+	display: block;
+	background-color: #ffffff;
+	margin-bottom: 4px;
+	transition: transform 0.2s ease, background-color 0.5s ease;
 }
+
 .menu-icon__line-left {
-  width: 15px;
+	width: 15px;
 }
+
 .menu-icon__line-right {
-  width: 15px;
-  float: right;
+	width: 15px;
+	float: right;
 }
 
 .nav {
-  position: fixed;
-  z-index: 1;
+	position: fixed;
+	z-index: 1;
 }
-.nav:before, .nav:after {
-  content: "";
-  position: fixed;
-  width: 100vw;
-  right: -1px;
-  top:-1px;
-  height: 100vh;
-  background: rgba(234, 234, 234, 0.2);
-  z-index: -1;
-  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
-  transform: translateX(0%) translateY(-100%);
-}
+
+.nav:before,
 .nav:after {
-  background: white;
-  transition-delay: 0s;
+	content: "";
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	right: 0px;
+	top: -5px;
+	background: rgba(234, 234, 234, 0.2);
+	z-index: -1;
+	transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
+	transform: translateX(0%) translateY(-100%);
 }
+
+.nav:after {
+	background: white;
+	transition-delay: 0s;
+}
+
 .nav:before {
-  transition-delay: 0.1s;
+	transition-delay: 0.1s;
 }
+
 .nav__content {
-  position: fixed;
-  top: 50%;
-  transform: translate(0%, -50%);
-  width: 100%;
-  text-align: center;
-  font-size: calc(1vw + 10px);
-  right: 10px;
-  font-weight: 200;
-  cursor: pointer;
+	position: fixed;
+	top: 50%;
+	transform: translate(0%, -50%);
+	width: 100%;
+	left: -10px;
+	text-align: center;
+	font-size: calc(2vw + 10px);
+	font-weight: 200;
+	cursor: pointer;
 }
+
 .nav__list-item {
-  position: relative;
-  display: inline-block;
-  transition-delay: 0.8s;
-  opacity: 0;
-  transform: translate(0%, 100%);
-  transition: opacity 0.2s ease, transform 0.3s ease;
-  margin-right: 25px;
+	position: relative;
+	display: inline-block;
+	transition-delay: 0.8s;
+	opacity: 0;
+	transform: translate(0%, 100%);
+	transition: opacity 0.2s ease, transform 0.3s ease;
+	margin-right: 25px;
 }
+
 .nav__list-item:before {
-  content: "";
-  position: absolute;
-  background: #000000;
-  width: 20px;
-  height: 1px;
-  top: 100%;
-  transform: translate(0%, 0%);
-  transition: all 0.3s ease;
-  z-index: -1;
+	content: "";
+	position: absolute;
+	background: #000000;
+	width: 20px;
+	height: 1px;
+	top: 100%;
+	transform: translate(0%, 0%);
+	transition: all 0.3s ease;
+	z-index: -1;
 }
+
 .nav__list-item:hover:before {
-  width: 100%;
+	width: 100%;
 }
 
 body.nav-active .menu-icon__line {
-  background-color: #000;
-  transform: translateX(0px) rotate(-45deg);
+	background-color: #000;
+	transform: translateX(0px) rotate(-45deg);
 }
+
 body.nav-active .menu-icon__line-left {
-  transform: translateX(1px) rotate(45deg);
+	transform: translateX(1px) rotate(45deg);
 }
+
 body.nav-active .menu-icon__line-right {
-  transform: translateX(-2px) rotate(45deg);
+	transform: translateX(-2px) rotate(45deg);
 }
+
 body.nav-active .nav {
-  visibility: visible;
+	visibility: visible;
 }
-body.nav-active .nav:before, body.nav-active .nav:after {
-  transform: translateX(0%) translateY(0%);
-}
+
+body.nav-active .nav:before,
 body.nav-active .nav:after {
-  transition-delay: 0.1s;
+	transform: translateX(0%) translateY(0%);
 }
+
+body.nav-active .nav:after {
+	transition-delay: 0.1s;
+}
+
 body.nav-active .nav:before {
-  transition-delay: 0s;
+	transition-delay: 0s;
 }
+
 body.nav-active .nav__list-item {
-  opacity: 1;
-  transform: translateX(0%);
-  transition: opacity 0.3s ease, transform 0.3s ease, color 0.3s ease;
+	opacity: 1;
+	transform: translateX(0%);
+	transition: opacity 0.3s ease, transform 0.3s ease, color 0.3s ease;
 }
+
 body.nav-active .nav__list-item:nth-child(0) {
-  transition-delay: 0.5s;
+	transition-delay: 0.5s;
 }
+
 body.nav-active .nav__list-item:nth-child(1) {
-  transition-delay: 0.6s;
+	transition-delay: 0.6s;
 }
+
 body.nav-active .nav__list-item:nth-child(2) {
-  transition-delay: 0.7s;
+	transition-delay: 0.7s;
 }
+
 body.nav-active .nav__list-item:nth-child(3) {
-  transition-delay: 0.8s;
+	transition-delay: 0.8s;
 }
+
 body.nav-active .nav__list-item:nth-child(4) {
-  transition-delay: 0.9s;
+	transition-delay: 0.9s;
 }
+
 body.nav-active .nav__list-item:nth-child(5) {
-  transition-delay: 1.0s;
+	transition-delay: 1.0s;
 }
+
 body.nav-active .nav__list-item:nth-child(6) {
-  transition-delay: 1.1s;
+	transition-delay: 1.1s;
 }
+
 body.nav-active .nav__list-item:nth-child(7) {
-  transition-delay: 1.2s;
+	transition-delay: 1.2s;
 }
-/*# sourceMappingURL=style.css.map */
+
+.removedecolink {
+	text-decoration: none;
+	color: black;
+	box-shadow: inset 0 -3px 0 0 black;
+	box-shadow: none;
+
+}
