--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-	background-color: #1e2023;
+	background-color: orange;
 	font-family: "Fira Sans", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -16,7 +16,7 @@ p {
 	text-align: justify;
 	margin: 50px 0;
 	padding: 0 30px;
-	color:white;
+	color: black;
 }
 
 #progress {
@@ -36,12 +36,12 @@ p {
 	display: block;
 	height: calc(100% - 15px);
 	width: calc(100% - 15px);
-	background-color: #ffffff;
+	background-color: orange;
 	border-radius: 50%;
 	display: grid;
 	place-items: center;
 	font-size: 35px;
-	color: #001a2e;
+	color: #fff;
 }
 
 .site-content {
@@ -56,7 +56,7 @@ p {
 
 .site-content__headline {
 	font-weight: 200;
-	color: #ffffff;
+	color: #080808;
 	font-size: calc(2vw + 10px);
 }
 
@@ -74,7 +74,7 @@ p {
 	height: 2px;
 	width: 30px;
 	display: block;
-	background-color: #ffffff;
+	background-color: #080808;
 	margin-bottom: 4px;
 	transition: transform 0.2s ease, background-color 0.5s ease;
 }
@@ -100,7 +100,7 @@ p {
 	width: 100vw;
 	height: 100vh;
 	right: 0px;
-	top: -5px;
+	top: -0.5px;
 	background: rgba(234, 234, 234, 0.2);
 	z-index: -1;
 	transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
